Edit media links in html

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             </div>
         </div>
         <!--TODO social media pojawiają się w menu tylko na mobile i tabletach (kiedy burger)-->
-        <div class="nav-media">
+        <div class="media">
             <hr>
-            <a href="#"><img src="./img/social/brand-facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="./img/social/brand-linkedin.png" alt="Linkedin"></a>
-            <a href="#"><img src="./img/social/brand-github-filled.png" alt="Github"></a>
-            <a href="#"><img src="./img/social/brand-gmail.png" alt="Gmail"></a>
+            <a href="#"><i class="fa-brands fa-facebook" alt="Facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in" alt="Linkedin"></i></a>
+            <a href="#"><i class="fa-brands fa-github" alt="Github"></i></a>
+            <a href="#"><i class="fa-regular fa-envelope circle" alt="Gmail"></i></a>
         </div>
     </nav>
 
@@ -328,11 +328,11 @@
     <!--TODO media podświetlają się po najechaniu myszką-->
     <footer class="footer">
         <div class="footer-text">jeska&copy; | 2024</div>
-        <div class="footer-media">
-            <a href="#"><img src="./img/social/brand-facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="./img/social/brand-linkedin.png" alt="Linkedin"></a>
-            <a href="#"><img src="./img/social/brand-github-filled.png" alt="Github"></a>
-            <a href="#"><img src="./img/social/brand-gmail.png" alt="Gmail"></a>
+        <div class="media">
+            <a href="#"><i class="fa-brands fa-facebook" alt="Facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in media--circle" alt="Linkedin"></i></a>
+            <a href="#"><i class="fa-brands fa-github" alt="Github"></i></a>
+            <a href="#"><i class="fa-regular fa-envelope media--circle" alt="Gmail"></i></a>
         </div>
     </footer>
 
