Edit HTML section footer

--- a/index.html
+++ b/index.html
@@ -338,12 +338,15 @@
 
     <!--TODO media podświetlają się po najechaniu myszką-->
     <footer class="footer">
-        <div class="footer-text">jeska&copy; | 2024</div>
-        <div class="media">
+        <div class="footer__media">
             <a href="#"><i class="fa-brands fa-facebook" alt="Facebook"></i></a>
             <a href="#"><i class="fa-brands fa-linkedin-in media--circle" alt="Linkedin"></i></a>
             <a href="#"><i class="fa-brands fa-github" alt="Github"></i></a>
             <a href="#"><i class="fa-regular fa-envelope media--circle" alt="Gmail"></i></a>
+        </div>
+        <div class="footer__copyright">
+            <hr>
+            <p>jeska&copy; | 2024</p>
         </div>
     </footer>
 
