Edit section counter

--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
                     </div>
                 </div>
             </div>
-            <div class="hero-shadow"></div>
         </div>
     </header>
 
@@ -288,12 +287,12 @@
     <!--TODO wjechanie img i potem efekt naliczania liczb-->
     <section class="counter">
         <div class="counter-item">
-            <img src="./img/counter/moon-stars.png" alt="Sleepless nights">
+            <img src="./img/counter/coffee.png" alt="Coffee shots">
             <h5>sleepless nights at coding</h5> <!--put an all-nighter at coding-->
             <p class="counter-box--numbers">113</p>
         </div>
         <div class="counter-item">
-            <img src="./img/counter/battery-4.png" alt="Energy power">
+            <img src="./img/counter/battery-4.png" alt="Energy power"> <!--TODO pusta bateria i dac before efekt ładowania się kawy na full-->
             <h5>zeal energy</h5>
             <p class="counter-box--letters">FULLY MOTIVATED</p>
         </div>
@@ -305,7 +304,7 @@
         <div class="counter-item">
             <img src="./img/counter/browser-check.png" alt="Completed projects">
             <h5>completed projects</h5>
-            <p class="counter-box--numbers">6</p>
+            <p class="counter-box--numbers">2</p>
         </div>
     </section>
 
