--- a/index.html
+++ b/index.html
@@ -321,6 +321,9 @@
     </section>
 
 
+<!--TODO między projektami a kontaktem dodać jakąś treść zachęcającą do współpracy???-->
+
+
     <!--bez efektów wjeżdżających-->
     <section class="contact" id="contact">
         <div class="wrapper">
@@ -331,6 +334,7 @@
             <div class="contact__boxes">
                 <div class="contact__info">
                     <a href="mailto:xsaminai@gmail.com"><i class="fa-solid fa-envelope"></i> xsaminai@gmail.com</a>
+                    <!--TODO media podświetlają się po najechaniu myszką-->
                     <div class="contact__info-socialmedia">
                         <a href=""><i class="fa-brands fa-square-facebook"></i></a>
                         <a href=""><i class="fa-brands fa-linkedin"></i></a>
@@ -359,18 +363,10 @@
         </div>
     </section>
 
-    <!--TODO media podświetlają się po najechaniu myszką-->
+    
     <footer class="footer">
-        <div class="footer__copyright">
-            <hr>
-            <p>jeska&copy; | 2024</p>
-        </div>
-        <div class="footer__media">
-            <a href="#"><i class="fa-brands fa-facebook" alt="Facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in media--circle" alt="Linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-github" alt="Github"></i></a>
-            <a href="#"><i class="fa-regular fa-envelope media--circle" alt="Gmail"></i></a>
-        </div>
+        <hr>
+        <p class="footer__copyright">Copyright &copy; <span class="footer__year"></span> | <!--wszelkie prawa zastrzeżone po ang--></p>
     </footer>
 
 </body>
