Edit text in hobby section - HTML

--- a/index.html
+++ b/index.html
@@ -250,20 +250,17 @@
                     <div class="hobby-box__img"></div>
                     <div class="hobby-box__text">
                         <h3>Carpentry</h3>
-                        <p>I've been absolutely smitten with the sweet scent of freshly cut wood. But my foray into the
-                            world of carpentry is a bit like the plot twist in a Hollywood movie - it didn't happen
-                            until a
-                            few years back.<br><br>
-                            I'm a self-taught wood whisperer with an undying reverence for the raw, unadulterated beauty
-                            of
-                            timber. I relish the moments when I can kick back without any pressure, unleashing my inner
-                            carpentry ideas. First, there's the thrill of sketching out a project on a piece of paper,
-                            and
-                            then it's time for the grand finale - calculating the measurements. But let me tell you,
-                            that's
-                            just the warm-up act. The real fun begins when something inevitably goes awry, and you're
-                            suddenly thrown into a whirlwind of alternative solutions. And you know what? I absolutely
-                            thrive on it!</p>
+                        <p>I've been absolutely amezed with the scent of freshly cut wood. But my entry into the world
+                            of carpentry is a bit like the plot twist in a Hollywood movie - it didn't happen until a
+                            few years back. <br><br>I'm a self-taught wood whisperer with an undying reverence for the
+                            raw,
+                            unadulterated beauty of timber. I relish the moments when I can kick back without any
+                            pressure, unleashing my inner carpentry ideas. <br><br>First, there's the thrill of
+                            sketching out a
+                            project on a piece of paper, and then it's time for the grand finale - calculating the
+                            measurements. But let me tell you, that's just the warm-up act. The real fun begins when
+                            something unexpectedly goes awry, and you're suddenly thrown into a whirlwind of alternative
+                            solutions. And you know what? I absolutely thrive on it!</p>
                     </div>
                 </div>
                 <div class="hobby-box hobby-box--left">
@@ -271,18 +268,13 @@
                     <div class="hobby-box__text">
                         <h3>Trekking</h3>
                         <p>I am the person who like to clean her head and let the stress go away. And you know what my
-                            secret weapon is?<br><br>Walking and watching the coolest places what naure can bring.
-                            Before
-                            you can witness the spectacle, you've got to negotiate a hostage exchange with your leg
-                            muscles,
-                            who demand a significant ransom in the form of effort. It's like striking a deal - "We'll
-                            climb,
-                            but you better deliver the goods!" And what goods they are! <br><br>When you finally conquer
+                            secret weapon is?<br><br>Walking and watching the coolest places what naure can bring. <br><br>
+                            Before you can witness the spectacle, you've got to negotiate a hostage exchange with your leg
+                            muscles, who demand a significant ransom in the form of effort. It's like striking a deal - "We'll
+                            climb, but you better deliver the goods!" And what goods they are! <br><br>When you finally conquer
                             that mountain, you're greeted with a refreshing breeze and a view that could make even your
                             wildest dreams blush. It's like hitting the "refresh" button on your brain while treating
-                            your
-                            senses to a visual feast.
-
+                            your senses to a visual feast.
                         </p>
                     </div>
                 </div>
