Add idea notes to counter section - HTML

--- a/index.html
+++ b/index.html
@@ -297,18 +297,18 @@
     </main>
 
 
-    <!--TODO wjechanie img i potem efekt naliczania liczb-->
+    <!--TODO wjechanie counter-item i potem efekt naliczania liczb-->
     <section class="counter">
         <div class="counter-item">
-            <img src="./img/counter/coffee.png" alt="Coffee shots">
-            <h5>sleepless nights at coding</h5> <!--put an all-nighter at coding-->
-            <p class="counter-box--numbers">113</p>
+            <img src="./img/counter/coffee.png" alt="Cup of coffee">
+            <h5>coffee shots</h5>
+            <p class="counter-box--numbers">999+</p> <!--pomysł - nalicza, ale na koniec wyświetla 'above the limit' i mruga 3 razy-->
         </div>
         <div class="counter-item">
             <img src="./img/counter/battery-4.png" alt="Energy power">
-            <!--TODO pusta bateria i dac before efekt ładowania się kawy na full-->
+            <!--pomysł -pusta bateria i dac before efekt ładowania się kawy na full LUB pełna bateria ale...-->
             <h5>zeal energy</h5>
-            <p class="counter-box--letters">FULLY MOTIVATED</p>
+            <p class="counter-box--letters">FULLY MOTIVATED!</p> <!--...ale litery tasują się losowo i wskakują na odpowiednią literę tworząc wyraz-->
         </div>
         <div class="counter-item">
             <img src="./img/counter/clock-code.png" alt="Coding time">
