Typo text hobby section - HTML

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description"
         content="Hello, World! Agnieszka on the board and I am doing my best to become Fullstack Developer. Check my portfolio and contact me or leave the feedback!">
     <meta name="keywords"
-        content="IT, programowanie, programming, junior, beginner, CV, resume, junior developer, junior web developer, frontend, backend, front-end, back-end, fullstack, javascript, HTML, CSS, portfolio, wizytówka, code, coding, pisanie kodu, lookingforjob, job, work, looking, 2023, 2024">
+        content="IT, programowanie, programming, junior, beginner, aspiring, CV, resume, junior developer, junior web developer, frontend, backend, front-end, back-end, fullstack, javascript, HTML, CSS, portfolio, wizytówka, business card, code, coding, pisanie kodu, looking for job, job, work, looking, 2023, 2024">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--icon-->
@@ -270,7 +270,7 @@
                         <p>I am the person who like to clean her head and let the stress go away. And you know what my
                             secret weapon is?<br><br>Walking and watching the coolest places what naure can bring. <br><br>
                             Before you can witness the spectacle, you've got to negotiate a hostage exchange with your leg
-                            muscles, who demand a significant ransom in the form of effort. It's like striking a deal - "We'll
+                            muscles, who demand a significant ransom. It's like striking a deal - "We'll
                             climb, but you better deliver the goods!" And what goods they are! <br><br>When you finally conquer
                             that mountain, you're greeted with a refreshing breeze and a view that could make even your
                             wildest dreams blush. It's like hitting the "refresh" button on your brain while treating
