Add note in HTML project section

--- a/index.html
+++ b/index.html
@@ -268,10 +268,13 @@
                     <div class="hobby-box__text">
                         <h3>Trekking</h3>
                         <p>I am the person who like to clean her head and let the stress go away. And you know what my
-                            secret weapon is?<br><br>Walking and watching the coolest places what naure can bring. <br><br>
-                            Before you can witness the spectacle, you've got to negotiate a hostage exchange with your leg
+                            secret weapon is?<br><br>Walking and watching the coolest places what naure can bring.
+                            <br><br>
+                            Before you can witness the spectacle, you've got to negotiate a hostage exchange with your
+                            leg
                             muscles, who demand a significant ransom. It's like striking a deal - "We'll
-                            climb, but you better deliver the goods!" And what goods they are! <br><br>When you finally conquer
+                            climb, but you better deliver the goods!" And what goods they are! <br><br>When you finally
+                            conquer
                             that mountain, you're greeted with a refreshing breeze and a view that could make even your
                             wildest dreams blush. It's like hitting the "refresh" button on your brain while treating
                             your senses to a visual feast.
@@ -302,13 +305,15 @@
         <div class="counter-item">
             <img src="./img/counter/coffee.png" alt="Cup of coffee">
             <h5>coffee shots</h5>
-            <p class="counter-box--numbers">999+</p> <!--pomysł - nalicza, ale na koniec wyświetla 'above the limit' i mruga 3 razy-->
+            <p class="counter-box--numbers">999+</p>
+            <!--pomysł - nalicza, ale na koniec wyświetla 'above the limit' i mruga 3 razy-->
         </div>
         <div class="counter-item">
             <img src="./img/counter/battery-4.png" alt="Energy power">
             <!--pomysł -pusta bateria i dac before efekt ładowania się kawy na full LUB pełna bateria ale...-->
             <h5>zeal energy</h5>
-            <p class="counter-box--letters">FULLY MOTIVATED!</p> <!--...ale litery tasują się losowo i wskakują na odpowiednią literę tworząc wyraz-->
+            <p class="counter-box--letters">FULLY MOTIVATED!</p>
+            <!--...ale litery tasują się losowo i wskakują na odpowiednią literę tworząc wyraz-->
         </div>
         <div class="counter-item">
             <img src="./img/counter/clock-code.png" alt="Coding time">
@@ -323,7 +328,11 @@
     </section>
 
 
-    <!--TODO skończyć sekcję, kiedy będą projekty? sprawdzic czy da się połączyć z GH projektami(API?)-->
+    <!--TODO skończyć sekcję, kiedy będą projekty? póki co można przygotować szablon-->
+    <!--Wygląd: 
+        -w spoczynku pod wzór GH, 
+        -po najechaniu myszką lekko powieksza się/pokazuje link do GH i projektu life/tło czarno-białe i rozmyty projekt strony,
+        -po kliknięciu myszką prompt z wizualizacją wstępną projektu(kolor), opisem i technologiami + linki GH i life-->
     <section class="projects" id="projects">
         <div class="wrapper">
             <div class="text-title">
