Fill copyrights in footer section

--- a/index.html
+++ b/index.html
@@ -383,8 +383,7 @@
 
     <footer class="footer">
         <hr>
-        <p class="footer__copyright">Copyright &copy; <span class="footer__year"></span> |
-            <!--TODO wszelkie prawa zastrzeżone po ang-->
+        <p class="footer__copyright">Copyright &copy; <span class="footer__year"></span>. All right reserved. | jeska.pl
         </p>
     </footer>
 
